Improves the benchmark
* Reduces potential dead-code eliminations.
* Default benchmark settings with longer warmup and iteration runs.
* Turn on the JVM aggressive optimizations by default.